# summarizer

./: .gitignore  LICENSE  README.md  notes.md  pyproject.toml  summarizer-install.sh  summarizer.py
docs/: summarizer-install.md
src/: classify.py  config.py  extractors.py  main.py  markdown_gen.py  service.py  utils.py
